@@ -1,7 +1,7 @@
 [buildout]
 develop = .
 parts = interpreter test
-extends = http://grok.zope.org/releaseinfo/grok-1.0a1.cfg
+extends = http://grok.zope.org/releaseinfo/grok-1.0a2.cfg
 versions = versions
 
 [interpreter]
