@@ -3,7 +3,17 @@
     xmlns:grok="http://namespaces.zope.org/grok"
     i18n_domain="megrok.menu">
 
-  <include package="grok" />
+
+  <include package="zope.app.zcmlfiles" file="meta.zcml" />
+  <include package="zope.securitypolicy" file="meta.zcml" />
+
+  <include package="zope.app.zcmlfiles" />
+  <include package="zope.app.authentication" />
+
+  <!-- Load minimal support of grokcore.view, views + templates  -->
+  <include package="grokcore.view" file="meta-minimal.zcml" />
+  <include package="grokcore.view" />
+
   <include package="megrok.menu" file="meta.zcml" />
   <grok:grok package="megrok.menu.tests" />
 
